indexの変更。QR.htmlの追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>NCC出席</title>
 </head>
 <body>
-    <div class="main">
-        <h1><a href="QR.html">出席画面</a></h1>
+    <div class="header">
+        <p id="admin"><a href="admin.html">教職員用</p>
     </div>
-    <div class="hedder">
-        <p><a href="admin.html">教職員用</p>
+    <div class="main">
+        <h1><a href="QR.html">出席する</a></h1>
     </div>
 </body>
 </html>
