admin.html、QR.js、style.cssの追加

--- a/templates/QR.html
+++ b/templates/QR.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
-    <title>出席画面</title>
+    <title>NCC出席：出席画面</title>
 </head>
 <body>
     <div class="main">
@@ -12,7 +12,12 @@
 
         </div>
         <div class="attendance">
-            
+            <form>
+                <p>学籍番号を入力してください</p>
+                <input type="text" id="studentID">
+                <p>キーワードを入力してください</p>
+                <input type="text" id="keyword">
+            </form>
         </div>
     </div>
 </body>
