--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,6 +6,15 @@
     <title>管理者画面</title>
 </head>
 <body>
+    <div class="menu">
+        <div class="select">
+
+        </div>
+        <div class="sort">
+
+        </div>
+        <p id="">ダウンロード</p>
+    </div>
     <div class="main">
         
     </div>
