テスト用のDB追加。ログイン機能の試作

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -27,7 +27,7 @@
                 </form>
             </div>
             <button id="download">ダウンロード</button>
-            <button onclick="location.href='index.html'">ログアウト</button>
+            <button onclick="location.href='/index.html'">ログアウト</button>
         </div>
         <div class="table">
             <!-- 生徒テーブルの表示 -->
@@ -42,8 +42,9 @@
                         <th>公欠数</th>
                     </tr>
                 </thead> 
+                
                 <tbody>
-                    {% for  %}
+                    
                     <tr>
                         <td>1</td>
                         <td>2</td>
@@ -51,7 +52,6 @@
                         <td>4</td>
                         <td>5</td>
                     </tr>
-                    {% endfor %}
                 </tbody>
             </table>
         </div>
