--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,25 @@
 @charset "UTF-8";
+html, body{
+    margin: 0;
+    padding: 0 ;
+    height: 100%;
+    background: linear-gradient(90deg,#ff7f50,orange,yellow);
+    font-family: 'yu gothic ui', sans-serif;
+}
 .main{
     text-align: center;
+    font-size: larger;
+    font-weight: bold;
+    margin-top: 10%;
 }
-
 .header{
-    margin-bottom: 0px;
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+}
+#admin{
+    margin-right: 5%;
 }
 a{
     text-decoration: none;
