--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--CSSの読み込み-->
+    <!--要素の配置の読み込み-->
+    <link rel="stylesheet" href="../static/css/leyout_index.css">
+    <!--背景等の共通部分の読み込み-->
     <link rel="stylesheet" href="../static/css/style.css">
     <!--JSの読み込み-->
     <script src="../static/javascript/index.js"></script>
