--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        crossorigin="anonymous"></script>
+    <!--背景色の読み込み-->
     <link rel="stylesheet" href="../static/css/style.css">
+    <!--要素の配置の読み込み-->
+    <link rel="stylesheet" href="../static/css/leyout_login.css">
+    <!--アイコンの読み込み-->
     <link rel="icon" href="../static/icons/ncc.ico">
     <title>NCC出席</title>
 </head>
@@ -14,14 +16,13 @@
         <h1>ログイン画面</h1>
         <form method="post" id="admin">
             {{ form.hidden_tag() }}
-
-            <div>
+            <div class="id">
                 {{ form.id.label }}{{ for.id() }}
-                {% for error in for.email.errors %}
+                {% for error in for.id.errors %}
                 <span style="color: red;">{{ error }}</span>
                 {% endfor %}
             </div>
-            <div>
+            <div class="password">
                 {{ form.password.label }}{{ form.password() }}
                 {% for error in form.password.errors %}
                 <span style="color: red;">{{ error }}</span>
@@ -32,4 +33,3 @@
     </div>
 </body>
 </html>
-<script src="../static/javascript/login.js"></script>
