絞り込み機能の改修

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,11 +20,11 @@
         <div class="menu">
             <div class="select"><!-- 絞り込み  -->
                 <p>学生名</p>
-                <input type="text">
+                <input type="text" id="name">
                 <p>学年</p>
-                <input type="text">
+                <input type="text" id="grade">
                 <p>学科</p>
-                <input type="text">
+                <input type="text" id="department">
                 <p>
                     <button id="filterButton">絞り込み</button>
                 </p>
