フロントサイドでの変更

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -30,7 +30,9 @@
                 </p>
             </div>
             <button id="download">ダウンロード</button>
-            <a href="/logout">ログアウト</a>
+
+            <!--ログアウトボタン-->
+            <button id="logout">ログアウト</button>
         </div>
         <div class="table">
             <!-- 生徒テーブルの表示 -->
