--- a/static/css/styleAdmin.css
+++ b/static/css/styleAdmin.css
@@ -17,6 +17,7 @@ html, body{
     padding-top: 40px;
     text-align: center;
     background-color: aqua;
+    border-right: 3px solid black;
 }
 
 .table{
